[package]
name = "ansi_term"
description = "Library for ANSI terminal colours and styles (bold, underline)"

authors = [ "ogham@bsago.me" ]
documentation = "http://bsago.me/doc/ansi_term/"
homepage = "https://github.com/ogham/rust-ansi-term"
license = "MIT"
readme = "README.md"
version = "0.4.3"

[lib]
name = "ansi_term"
doctest = false

[dependencies]
regex = "0.1.8"
regex_macros = "0.1.2"
