[package]
name = "ansi_term"
description = "Library for ANSI terminal colours and styles (bold, underline)"

authors = [ "ogham@bsago.me", "Ryan Scheel (Havvy) <ryan.havvy@gmail.com>", "Josh Triplett <josh@joshtriplett.org>" ]
documentation = "https://docs.rs/ansi_term"
homepage = "https://github.com/ogham/rust-ansi-term"
license = "MIT"
readme = "README.md"
version = "0.10.2"

[lib]
name = "ansi_term"
